@@ -9,6 +9,8 @@
 	* bitstream.[ch]:
 	  - Some variables' type changed from int to size_t. (closing #89 and
 	    #102)
+	* tests/common.[ch]:
+	  - Fixed some warnings.
 
 2017.09.29 Kentaro Fukuchi <kentaro@fukuchi.org>
 	[4.0]
